<resources>
    <string name="app_name">RideBlue</string>
    <string name="title_text">Ride Blue</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">App Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">Ride Blue</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">586920633106-s1gpsmnmn843qbv1emltus2bsllq2n4c.apps.googleusercontent.com</string>

    <string name="title_activity_maps">Ride Blue</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Toggle menu labels -->
    <string name="ride_request">Request Ride</string>
    <string name="ride_offer">Offer Ride</string>
    <string name="ride_off">No Ride</string>

    <!-- Bottom Navigation Drawer menu labels -->
    <string name="title_activity_bottom_navigation">Ride Blue</string>
    <string name="title_home">Account</string>
    <string name="title_dashboard">Trips </string>
    <string name="title_notifications">Stream</string>

    <!-- String values for Bottom Navigation Frame -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_this_home">helloHome</string>
    <string name="hello_this_fragment">fragemnethello</string>
    <string name="hello_this_trip">thistrip</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="cast">cass</string>
    <string name="desc">desc</string>
    <string name="user_name">User name</string>
    <string name="user_gmail">user gmail</string>
    <string name="Profile_Image">Profile Image</string>
    <string name="hint_name">name</string>
    <string name="hint_email">email</string>
    <string name="address">address</string>
    <string name="car">car</string>
    <string name="phoneix_AEDR">Phoenix AEDR</string>
    <string name="phoneix_TRCW">Phoenix TRCW</string>
    <string name="accessde">Location Access Denied</string>

    <string name="saveDetails">Save</string>
    <string name="Phoneix_AEDR">Phoenix_AEDR</string>
    <string name="Phoneix_TRCW">Phoenix_TRCW</string>
    <string name="Amex_LosAngels">Amex_LosAngels</string>
    <string name="Amex_Newyork">Amex_Newyork</string>
    <string name="officeDetails">officeDetails</string>
    <string name="houseaddress">5635 E Bell RD,
                                Apt 1024,
                                Phoenix, AZ.
                                850254</string>
    <string name="message1">Please Select the Office Address from the below options</string>
    <string name="message2">Please fill in your home address</string>
    <string name="message3">Please fill in your Car Details</string>

</resources>

